--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -20,7 +20,6 @@
     "@enkryptcom/storage": "^0.0.1",
     "@enkryptcom/types": "^0.0.1",
     "@enkryptcom/utils": "^0.0.1",
-    "@polkadot/types": "^7.13.1",
     "@polkadot/util": "^8.4.1",
     "@polkadot/wasm-crypto": "^5.0.1",
     "@types/chrome": "^0.0.180",
@@ -39,6 +38,10 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@polkadot/api": "^7.13.1",
+    "@polkadot/extension-inject": "^0.42.9",
+    "@polkadot/rpc-provider": "^7.13.1",
+    "@polkadot/types": "^7.13.1",
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
