--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -35,7 +35,9 @@
     "url-parse": "^1.5.10",
     "vue": "^3.2.31",
     "vue-router": "4",
-    "vue3-lottie": "^2.1.0"
+    "vue3-lottie": "^2.1.0",
+    "web3": "^1.7.3",
+    "web3-utils": "^1.7.3"
   },
   "devDependencies": {
     "@polkadot/api": "^8.0.2",
@@ -62,6 +64,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "https-browserify": "^1.0.0",
+    "less": "^4.1.2",
     "less-loader": "^5.0.0",
     "mocha": "^9.2.0",
     "prettier": "^2.4.1",
@@ -71,9 +75,11 @@
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-uglify": "^6.0.4",
     "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "ts-mocha": "^9.0.2",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5",
+    "url": "^0.11.0",
     "webextension-polyfill": "^0.8.0"
   },
   "installConfig": {
