--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -37,7 +37,8 @@
     "vue-router": "4",
     "vue3-lottie": "^2.1.0",
     "web3": "^1.7.3",
-    "web3-utils": "^1.7.3"
+    "web3-utils": "^1.7.3",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@polkadot/api": "^8.0.2",
