--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -20,6 +20,7 @@
     "@enkryptcom/storage": "^0.0.1",
     "@enkryptcom/types": "^0.0.1",
     "@enkryptcom/utils": "^0.0.1",
+    "@polkadot/ui-shared": "^2.0.1",
     "@polkadot/util": "^9.0.1",
     "@polkadot/wasm-crypto": "^6.0.1",
     "@types/chrome": "^0.0.180",
