--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -26,12 +26,14 @@
     "@types/chrome": "^0.0.180",
     "@types/events": "^3.0.0",
     "@types/less": "^3.0.3",
+    "@types/lodash": "^4.14.182",
     "bignumber.js": "^9.0.2",
     "chai": "^4.3.6",
     "concurrently": "^7.0.0",
     "core-js": "^3.21.0",
     "ethereumjs-util": "^7.1.4",
     "eventemitter3": "^4.0.7",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "rollup-plugin-node-builtins": "^2.1.2",
     "url-parse": "^1.5.10",
