--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -27,6 +27,7 @@
     "@types/events": "^3.0.0",
     "@types/less": "^3.0.3",
     "@types/lodash": "^4.14.182",
+    "add": "^2.0.6",
     "bignumber.js": "^9.0.2",
     "chai": "^4.3.6",
     "concurrently": "^7.0.0",
@@ -34,6 +35,7 @@
     "ethereumjs-util": "^7.1.4",
     "eventemitter3": "^4.0.7",
     "lodash": "^4.17.21",
+    "memoize-one": "^6.0.0",
     "moment": "^2.29.1",
     "rollup-plugin-node-builtins": "^2.1.2",
     "url-parse": "^1.5.10",
@@ -41,7 +43,8 @@
     "vue-router": "4",
     "vue3-lottie": "^2.1.0",
     "web3": "^1.7.3",
-    "web3-utils": "^1.7.3"
+    "web3-utils": "^1.7.3",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "@polkadot/api": "^8.0.2",
