--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -59,6 +59,7 @@
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/mocha": "^9.1.0",
     "@types/url-parse": "^1.4.8",
+    "@types/zxcvbn": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.4",
