--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -29,6 +29,7 @@
     "@types/events": "^3.0.0",
     "@types/less": "^3.0.3",
     "@types/lodash": "^4.14.182",
+    "@types/utf-8-validate": "^5.0.0",
     "add": "^2.0.6",
     "bignumber.js": "^9.0.2",
     "bip39": "^3.0.4",
@@ -80,6 +81,7 @@
     "less": "^4.1.2",
     "less-loader": "^5.0.0",
     "mocha": "^9.2.0",
+    "path-browserify": "^1.0.1",
     "prettier": "^2.4.1",
     "rollup": "^2.68.0",
     "rollup-plugin-node-builtins": "^2.1.2",
