--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -44,6 +44,7 @@
     "@metaplex-foundation/umi": "^1.2.0",
     "@metaplex-foundation/umi-bundle-defaults": "^1.2.0",
     "@multiversx/sdk-core": "^15.0.0",
+    "@multiversx/sdk-transaction-decoder": "^2.0.0",
     "@polkadot/api": "^16.2.2",
     "@polkadot/extension-inject": "^0.59.2",
     "@polkadot/keyring": "^13.5.2",
