--- a/packages/swap/package.json
+++ b/packages/swap/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts --clean",
     "lint": "prettier --write .",
-    "test": "vitest run"
+    "test": "vitest tests/oneInchFus*"
   },
   "engines": {
     "node": ">=14.15.0"
