--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "yarn prebuild && cross-env BROWSER='chrome' vite",
+    "dev": "cross-env BROWSER='chrome' vite",
     "build2": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -12,15 +12,13 @@
     "lint": "eslint . --fix && yarn format",
     "format": "prettier --write src/",
     "zip": "cd dist; zip -r release.zip *;",
-    "prebuild": "yarn kadena:prebuild",
-    "build:chrome": "yarn prebuild && cross-env BROWSER='chrome' MINIFY='true' vite build",
-    "build:firefox": "yarn prebuild && cross-env BROWSER='firefox' MINIFY='true' vite build && node configs/get-system-info.js",
-    "build:opera": "yarn prebuild && cross-env BROWSER='opera' MINIFY='true' vite build",
-    "kadena:prebuild": "pactjs contract-generate --contract=coin --api https://api.chainweb.com/chainweb/0.0/mainnet01/chain/1/pact",
+    "build:chrome": "cross-env BROWSER='chrome' MINIFY='true' vite build",
+    "build:firefox": "cross-env BROWSER='firefox' MINIFY='true' vite build && node configs/get-system-info.js",
+    "build:opera": "cross-env BROWSER='opera' MINIFY='true' vite build",
     "test": "vitest run -c ./configs/vitest.config.mts",
     "watch": "yarn dev",
     "watch:chrome": "yarn dev",
-    "watch:firefox": "yarn prebuild && cross-env BROWSER='firefox' vite"
+    "watch:firefox": "cross-env BROWSER='firefox' vite"
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.25.0",
