--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint . --fix && yarn format",
     "format": "prettier --write src/",
     "zip": "cd dist; zip -r release.zip *;",
-    "prebuild": "yarn kadena:prebuild",
+    "prebuild": "exit 0;",
     "build:chrome": "yarn prebuild && cross-env BROWSER='chrome' MINIFY='true' vite build",
     "build:firefox": "yarn prebuild && cross-env BROWSER='firefox' MINIFY='true' vite build && node configs/get-system-info.js",
     "build:opera": "yarn prebuild && cross-env BROWSER='opera' MINIFY='true' vite build",
@@ -23,7 +23,7 @@
     "watch:firefox": "yarn prebuild && cross-env BROWSER='firefox' vite"
   },
   "dependencies": {
-    "@amplitude/analytics-browser": "^2.30.0",
+    "@amplitude/analytics-browser": "^2.31.1",
     "@enkryptcom/extension-bridge": "workspace:^",
     "@enkryptcom/hw-wallets": "workspace:^",
     "@enkryptcom/keyring": "workspace:^",
@@ -38,21 +38,21 @@
     "@ethereumjs/wallet": "^2.0.4",
     "@kadena/client": "^1.18.3",
     "@kadena/pactjs-cli": "^1.18.3",
-    "@ledgerhq/hw-transport-webusb": "^6.29.12",
+    "@ledgerhq/hw-transport-webusb": "^6.29.13",
     "@massalabs/massa-web3": "^5.3.0",
     "@metamask/eth-sig-util": "^8.2.0",
     "@metaplex-foundation/mpl-bubblegum": "^5.0.2",
     "@metaplex-foundation/umi": "^1.4.1",
     "@metaplex-foundation/umi-bundle-defaults": "^1.4.1",
-    "@polkadot/api": "^16.4.9",
-    "@polkadot/extension-inject": "^0.62.3",
-    "@polkadot/keyring": "^13.5.7",
-    "@polkadot/rpc-provider": "^16.4.9",
-    "@polkadot/types": "^16.4.9",
-    "@polkadot/types-known": "^16.4.9",
-    "@polkadot/ui-shared": "^3.16.2",
-    "@polkadot/util": "^13.5.7",
-    "@polkadot/wasm-crypto": "^7.5.1",
+    "@polkadot/api": "^16.5.2",
+    "@polkadot/extension-inject": "^0.62.5",
+    "@polkadot/keyring": "^13.5.8",
+    "@polkadot/rpc-provider": "^16.5.2",
+    "@polkadot/types": "^16.5.2",
+    "@polkadot/types-known": "^16.5.2",
+    "@polkadot/ui-shared": "^3.16.3",
+    "@polkadot/util": "^13.5.8",
+    "@polkadot/wasm-crypto": "^7.5.2",
     "@solana-developers/helpers": "2.8.0",
     "@solana/spl-token": "^0.4.14",
     "@solana/wallet-standard-features": "^1.3.0",
@@ -74,12 +74,12 @@
     "moment": "^2.30.1",
     "nanoevents": "^9.1.0",
     "pact-lang-api": "^4.3.6",
-    "pinia": "^3.0.3",
+    "pinia": "^3.0.4",
     "qrcode.vue": "^3.6.0",
     "switch-ts": "^1.1.1",
     "url-parse": "^1.5.10",
     "uuid": "^13.0.0",
-    "vue": "^3.5.22",
+    "vue": "^3.5.24",
     "vue-echarts": "8.0.1",
     "vue-router": "^4.6.3",
     "vue3-lottie": "^3.3.1",
@@ -98,28 +98,28 @@
     "@rollup/plugin-replace": "^6.0.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.3.0",
-    "@tsconfig/node20": "^20.1.6",
+    "@tsconfig/node20": "^20.1.8",
     "@types/bs58": "^5.0.0",
-    "@types/chrome": "^0.1.27",
+    "@types/chrome": "^0.1.31",
     "@types/ethereumjs-abi": "^0.6.5",
     "@types/events": "^3.0.3",
     "@types/fs-extra": "^11.0.4",
     "@types/less": "^3.0.8",
     "@types/lodash": "^4.17.20",
-    "@types/node": "^22.19.0",
+    "@types/node": "^22.19.1",
     "@types/semver": "^7.7.1",
     "@types/url-parse": "^1.4.11",
     "@types/utf-8-validate": "^5.0.2",
     "@types/uuid": "^11.0.0",
     "@types/wif": "^2.0.5",
     "@types/zxcvbn": "^4.4.5",
-    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitejs/plugin-vue": "^6.0.2",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
     "@vueuse/core": "^14.0.0",
     "cross-env": "^10.1.0",
-    "eslint": "^9.39.0",
+    "eslint": "^9.39.1",
     "eslint-plugin-vue": "^10.5.1",
     "fs-extra": "^11.3.2",
     "jsdom": "^26.1.0",
@@ -127,19 +127,19 @@
     "less-loader": "^12.3.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "^3.6.2",
-    "rimraf": "^6.1.0",
-    "rollup": "^4.52.5",
+    "rimraf": "^6.1.2",
+    "rollup": "^4.53.3",
     "rollup-plugin-visualizer": "^6.0.5",
     "semver": "^7.7.3",
     "systeminformation": "^5.27.11",
-    "tsup": "^8.5.0",
+    "tsup": "^8.5.1",
     "typescript": "~5.9.3",
     "url": "^0.11.4",
-    "vite": "^7.1.12",
+    "vite": "^7.2.2",
     "vite-plugin-node-polyfills": "0.24.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^4.0.6",
-    "vue-tsc": "^3.1.3",
+    "vitest": "^4.0.10",
+    "vue-tsc": "^3.1.4",
     "webextension-polyfill": "^0.12.0"
   },
   "installConfig": {
