--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -12,11 +12,11 @@
     "lint": "eslint . --fix && yarn format",
     "format": "prettier --write src/",
     "zip": "cd dist; zip -r release.zip *;",
-    "prebuild": "exit 0;",
+    "prebuild": "yarn kadena:prebuild",
     "build:chrome": "yarn prebuild && cross-env BROWSER='chrome' MINIFY='true' vite build",
     "build:firefox": "yarn prebuild && cross-env BROWSER='firefox' MINIFY='true' vite build && node configs/get-system-info.js",
     "build:opera": "yarn prebuild && cross-env BROWSER='opera' MINIFY='true' vite build",
-    "kadena:prebuild": "pactjs contract-generate --contract=coin --api https://api.chainweb.com/chainweb/0.0/mainnet01/chain/1/pact",
+    "kadena:prebuild": "pactjs contract-generate --contract=coin --api https://api.chainweb-community.org/chainweb/0.0/mainnet01/chain/1/pact",
     "test": "vitest run -c ./configs/vitest.config.mts",
     "watch": "yarn dev",
     "watch:chrome": "yarn dev",
