--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "@amplitude/plugin-autocapture-browser@^1.0.2": "patch:@amplitude/plugin-autocapture-browser@npm%3A1.0.3#./.yarn/patches/@amplitude-plugin-autocapture-browser-npm-1.0.3-edb25bef55.patch"
   },
   "dependencies": {
-    "axios": "^1.8.2",
-    "ecpair": "^3.0.0-rc.0"
+    "ecpair": "3.0.0-rc.0"
   }
 }
