--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -66,7 +66,7 @@
     "bs58": "^6.0.0",
     "concurrently": "^9.2.1",
     "echarts": "^6.0.0",
-    "ecpair": "^3.0.0-rc.0",
+    "ecpair": "^3.0.0",
     "electrum-client-browser": "1.2.5",
     "ethereum-cryptography": "^2.2.1",
     "ethereumjs-abi": "^0.6.8",
