--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -6,4 +6,6 @@ enableGlobalCache: false
 
 nodeLinker: node-modules
 
+npmRegistryServer: "https://registry.yarnpkg.com/"
+
 yarnPath: .yarn/releases/yarn-4.5.1.cjs
